fixed z-index issue with datepicker behind map legend

--- a/public/client/less/search/filters.less
+++ b/public/client/less/search/filters.less
@@ -37,6 +37,9 @@
     }
 
 }
+#ui-datepicker-div.ui-datepicker{
+    z-index:1000 !important;//overides jquery ui element z-index setting
+}
 #filters{
     z-index:10;
     position:relative;
