--- a/public/css/search.css
+++ b/public/css/search.css
@@ -31,6 +31,9 @@
 .ui-autocomplete li.item-wrapper a .ui-state-hover {
   background-image: none;
 }
+#ui-datepicker-div.ui-datepicker {
+  z-index: 1000 !important;
+}
 #filters {
   z-index: 10;
   position: relative;
